RESOLVED FIXED123894
AX: [ATK] Video and audio elements are not properly exposed
https://bugs.webkit.org/show_bug.cgi?id=123894
Summary AX: [ATK] Video and audio elements are not properly exposed
Mario Sanchez Prada
Reported 2013-11-06 08:28:09 PST
They should be exposed for now as ATK_ROLE_EMBEDDED, although later on they will probably should be updated to be exposed with a more media-ish role, once it exists in ATK (https://bugzilla.gnome.org/show_bug.cgi?id=711558). This would help to pass properly the following failing tests: accessibility/media-element.html platform/gtk/accessibility/media-controls-panel-title.html
Attachments
Patch proposal (20.05 KB, patch)
2013-11-06 09:53 PST, Mario Sanchez Prada
cfleizach: review+
Radar WebKit Bug Importer
Comment 1 2013-11-06 08:28:36 PST
Mario Sanchez Prada
Comment 2 2013-11-06 09:53:51 PST
Created attachment 216187 [details] Patch proposal
chris fleizach
Comment 3 2013-11-06 10:50:02 PST
Comment on attachment 216187 [details] Patch proposal View in context: https://bugs.webkit.org/attachment.cgi?id=216187&action=review > LayoutTests/platform/efl/accessibility/media-emits-object-replacement.html:6 > + var str = ""; need more indentation (4 spaces instead of 2) > LayoutTests/platform/gtk/accessibility/media-emits-object-replacement.html:20 > + return false; need more indentation for this block of code in this function > LayoutTests/platform/gtk/accessibility/media-emits-object-replacement.html:55 > + buildAccessibilityTree(accessibilityController.focusedElement, 0); need more indentation for these two lines
Mario Sanchez Prada
Comment 4 2013-11-07 03:10:34 PST
Note You need to log in before you can comment on or make changes to this bug.